--- a/app/views/calendar/flatcal.twig
+++ b/app/views/calendar/flatcal.twig
@@ -7,12 +7,12 @@
             <div class="card">
               <div class="card-body">
                     <div class="col-lg-10 col-sm-12 offset-lg-1">
-                        <div class="d-flex flex-row align-items-center justify-content-between col-sm3">
+                        <div class="d-flex flex-row align-items-center justify-content-between ">
                         {# nb semaines : {{calendrier.getWeeks()}} #}
-                            <h2 class="mb-4 text-center card-title">Calendrier Global : {{ calendrier.toString() }} </h2>
-                            <div class="navigation">
-                                <a href="{{  path_for('calendar.forall', { 'month': calendrier.previousMonth().month , 'year': calendrier.previousMonth().year})  }}" class="btn btn-primary" >&lt;</a>
-                                <a href="{{  path_for('calendar.forall', { 'month': calendrier.nextMonth().month , 'year': calendrier.nextMonth().year})  }}" class="btn btn-primary" >&gt;</a>
+                            <h2 class="mb-4 text-center card-title  ">Calendrier Global : {{ calendrier.toString() }} </h2>
+                            <div class="navigation btn-group ">
+                                <a href="{{  path_for('calendar.forall', { 'month': calendrier.previousMonth().month , 'year': calendrier.previousMonth().year})  }}" class="btn btn-primary btn-sm" >&lt;</a>
+                                <a href="{{  path_for('calendar.forall', { 'month': calendrier.nextMonth().month , 'year': calendrier.nextMonth().year})  }}" class="btn btn-primary btn-sm " >&gt;</a>
                             </div>
                         </div>
                     </div>
@@ -23,194 +23,91 @@
                             <table class="table table-striped table-bordered table-hover table-sm ">
                                 <caption>Listes des utilisateurs</caption>
                                 <thead class="thead-dark">
-                                <th><span class="d-block p-1 text-center text-muted">#Nom</span></th>
+                                <th scope="col"><span class="d-block p-1 text-center text-muted">#Nom</span></th>
                                  {% for w, week in 0..calendrier.getWeeks()-1 %}
                                     {% for k, day in calendrier.days %}
                                         {% set date = calendrier.getday(loop.parent.w,k) %}
                                             {% if calendrier.withinMonth(date) %}
-                                                <th><span class="d-block p-1 text-center text-muted">{{ day|first|upper }}</span><span class="d-block p-1 text-center ">{{ date|date("d") }}</span></th>
+                                                <th scope="col"><span class="d-block p-1 text-center text-muted">{{ day|first|upper }}</span><span class="d-block p-1 text-center ">{{ date|date("d") }}</span></th>
                                             {% endif %}
                                     {% endfor %}
                                 {% endfor %}
                                 </thead>
                                 <tbody>
+                                    {% for u, user_cal in user_events %}
+                                        <tr class="{% if user_cal.is_active%} table-warning{% endif %}">
+                                            <th scope="row" >
+                                                <div class="col-sm d-sm-inline-block text-left p-0">
+                                                        <button type="button" class=" btn btn-light btn-sm text-justify d-md-inline-block" data-toggle="modal" data-target="#userinfo{{user_cal.id}}">
+                                                            <i class="far fa-address-card"></i>
+                                                            <span data-toggle="tooltip"  data-placement="right" title="{{user_cal.prenom}} {{user_cal.nom}}" class="badge badge-light text-white text-right" style="background-color:{{user_cal.color}};">{{user_cal.macaron}}</span>
+                                                            <span class="d-none d-md-inline-block text-nowrap text-capitalize ">{{user_cal.nom}} {{user_cal.prenom}}</span>
+                                                        </button>
+                                                </div>
+                                            </th>
+                                            {% for w, week in 0..calendrier.getWeeks()-1 %}
+                                                {% for k, day in calendrier.days %}
+                                                    {% set date = calendrier.getday(loop.parent.w,k) %}
+                                                        {% if calendrier.withinMonth(date) %}
+                                                            <td class="text-center align-middle">
+                                                                    {% if user_cal[date|date("Ymd")]|length > 0 %}
+                                                                        <span class="badge badge-pill text-white bg-dark" style="background-color:{{user_cal[date|date("Ymd")].event_type.color}}!important;">{{ user_cal[date|date("Ymd")].event_type.translated_eventType }} {% if user_cal[date|date("Ymd")].voiture %}<br><i class="fa-sm fas fa-car "></i>{% endif %}</span>
+
+
+                                                                    {% endif %}
+
+                                                            </td>
+                                                        {% endif %}
+                                                {% endfor %}
+                                            {% endfor %}
+                                        </tr>
+                                    {% endfor%}
+
                                 </tbody>
                             </table>
                         </div>
                     </div>
 
-                    <div class="calendrier col-lg-10 col-sm-12 offset-lg-1 mh-75 {{ 'nb_weeks_' ~ calendrier.getWeeks() }}">
-                        <header>
-                            <div class="row d-none d-sm-flex p-1 bg-dark text-white">
-                                {% for k, day in calendrier.days %}
-                                <h3 class="col-sm p-1 text-center">{{ day }}</h3>
-                                {% endfor %}
+                {% for u, user_cal in user_events %}
+                    <div class="modal fade" id="userinfo{{user_cal.id}}" tabindex="{{loop.index}}" aria-labelledby="userinfo" aria-hidden="true">
+                      <div class="modal-dialog">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">{{user_cal.nom}} {{user_cal.prenom}}</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                              <span aria-hidden="true">&times;</span>
+                            </button>
+                          </div>
+                          <div class="modal-body ">
+                            <div class="text-center mb-4 pb-3 border border-left-0 border-right-0 border-top-0">
+                                <span class="user_macaron m-0" style="font-size:1.2rem;background-color:{{user_cal.color}};;">{{ user_cal.macaron }}</span>&nbsp;<i style="color:{{user_cal.color}};" class="align-middle fas fa-address-card fa-5x"></i>
                             </div>
-                        </header>
+                            <ul class="list-group">
+                                <li class="list-group-item"> Contacter par Email : <a href="mailto:{{user_cal.email}}" class="btn btn-sm btn-primary"/><i class="fas fa-envelope"></i></a></li>
+                                <li class="list-group-item"><i class="fas fa-map-marker-alt"></i> Ville : {{user_cal.ville}}</li>
+                                <li class="list-group-item"><i class="fas fa-id-badge"></i> Service : {{user_cal.service}}</li>
+                                <li class="list-group-item"><i class="fas fa-phone"></i> Téléphone : {{user_cal.tel}}</li>
+                                <li class="list-group-item"><i class="fas fa-mobile-alt"></i> Portable : {{user_cal.gsm}}</li>
+                            </ul>
 
-                        <div class="row border border-right-0 border-bottom-0">
-                            {% for w, week in 0..calendrier.getWeeks()-1 %}
-                                {% for k, day in calendrier.days %}
-                                    {% set date = calendrier.getday(loop.parent.w,k) %}
-                                    <div class="day col-sm p-2 border border-left-0 border-top-0 text-truncate {{ (date|date("d/m/Y") is same as (calendrier.date_today)) ? "today text-white" : "" }}  {{ calendrier.withinMonth(date)  ? '' : 'bg-light text-muted' }}"> <!-- d-none d-sm-inline-block bg-light text-muted -->
-                                      <h5 class="row align-items-center">
-                                        <span class="date col-1">{{ date|date("d") }}</span>
-                                        <span class="col-1"></span>
-                                        <small class="col d-sm-none text-center text-muted">{{ day }}</small>
-                                      </h5>
-                                      {# <p> s{{ loop.parent.w  }} - d{{k}}</p> #}
-                                        {% if calendrier.withinMonth(date) %}
-                                           {#  {% if (user_events[date|date("Ymd")] is defined) %} #}
-                                                {# <a class="event d-block p-1 pl-2 pr-2 mb-1 rounded text-truncate small bg-info text-white align-middle" title="Test Event 1">
-                                                    <span class="badge badge-light">{{user_events[date|date("Ymd")].user_initiales}}</span>
-                                                    {{user_events[date|date("Ymd")].translated_eventType}}
-                                                </a> #}
-                                               {#  <div class="input-group input-group-sm">
-                                                    <div class="input-group-prepend">
-                                                        <span class="input-group-text"><span class="badge badge-light">{{user.macaron()}}</span></span>
-                                                    </div>
-                                                    <select name="sj{{ date|date("d") }}" id="sj{{ date|date("Ymd") }}" class="type_event form-control form-control-sm {% if (user_events[date|date("Ymd")] is defined) %}is-valid{% endif %}">
-                                                            <option value=""></option>
-                                                            {% for l,type in liste_type_event %}
-                                                            <option value="{{ l }}" {% if l is same as(user_events[date|date("Ymd")].eventType_id) %} selected="selected" {% endif %}> {{ type.titre }}</option>
-                                                            {% endfor %}
-                                                    </select>
-
-                                                    <div class="input-group-append align-middle ">
-                                                        <div class="input-group-text {% if user_events[date|date("Ymd")].voiture %} checked-success {% endif %}">
-                                                            <label for="voiture_sj{{ date|date("d") }}" class="mb-0" ><i class="mr-1 fas fa-car "></i></label>
-                                                            <input class="opt_voiture checkbox" type="checkbox" id="voiture_sj{{ date|date("d") }}" name="voiture_sj{{ date|date("d") }}" aria-label="Checkbox voiture" {% if user_events[date|date("Ymd")].voiture %} checked="checked" {% endif %}/>
-                                                        </div>
-                                                    </div>
-                                                </div> #}
-                                            {# {% else %}
-                                                <select name="sj{{ date|date("d") }}" id="sj{{ date|date("Ymd") }}" class="type_event form-control form-control-sm">
-                                                    <option value=""></option>
-                                                    {% for l,type in liste_type_event %}
-                                                    <option value="{{ l }}"> {{ type.titre }}</option>
-                                                    {% endfor %}
-                                                </select>
-                                                <p class="d-sm-none">No events</p>
-                                            {% endif %} #}
-                                        {% endif %}
-                                    </div>
-                                {% endfor %}
-                                <div class="w-100"></div>
-                            {% endfor %}
+                          </div>
                         </div>
-
+                      </div>
                     </div>
-              </div>
-            </div>
+                {% endfor %}
 
         {% else %}
 
         {% endif %}
 
-       {#  <pre>{{dump(liste_type_event)}}</pre> #}
-         {# <pre>{{dump(user_events)}}</pre>
-          #}
-          {# <pre>{{ dump(data)}}</pre> #}
+
     </div>
 
     <script>
     $(document).ready(function()
     {
-       /*
-        $(".opt_voiture.checkbox").on("change", function()
-        {
-            $(this).closest(".input-group-append").find(".input-group-text").toggleClass('checked-success');
-            check_verif($(this));
-        });
-
-
-
-        $("select.type_event").each(function(){
-
-            var selected = $(this).val();
-            if(selected){
-                console.log($(this).attr('id') + " : " + selected);
-            }
-
-            $(this).on("change", function(){
-                var newselected = $(this).val();
-                console.log($(this).attr('id') + ": "+ selected + " -> " + newselected);
-
-                if(newselected == selected) {
-                    if(selected){
-                        $(this).addClass('is-valid');
-                        $(this).removeClass('is-changing is-invalid');
-                    } else {
-                        $(this).removeClass('is-valid is-changing is-invalid');
-                    }
-                }
-                else {
-                    $(this).addClass('is-changing');
-                    $(this).removeClass('is-valid is-invalid');
-                    if(!newselected){
-                        $(this).addClass('is-invalid');
-                        $(this).removeClass('is-valid is-changing');
-                        $(this).closest(".input-group").find(".input-group-text").removeClass('checked-success').find('.opt_voiture.checkbox').prop("checked", false);
-                    }
-                    //$(this).toggleClass('is-valid is-invalid');
-                }
-            });
-        });
-
-        // UPDATE du calendrier en Ajax si on navigue sans submit :)
-        $(".navigation a").on("click", function(e){
-            e.preventDefault();
-            e.stopPropagation();
-            var href = $(this).attr("href");
-            var checkVal = new Array();
-
-            $('.input-group').find('select.type_event').each(function () {
-                var selId = $(this).attr('id');
-                if(($(this).prop('required')) && (!$(this).val()))
-                {
-                    //console.log("error field " + selId);
-                    checkVal.push(selId);
-                }
-            })
-
-            if(!$('#getCalendar')[0].checkValidity()) {
-                console.log('errors checkValidity()');
-                console.log(checkVal);
-                $('#getCalendar').find(':submit').click(); //histoire de faire remonter la non conformité du form
-                //console.log('submit calendar :' + $('#getCalendar')[0].checkValidity());
-            }
-            else
-            {
-                $.ajax({
-                    url: "{{ path_for('calendar.update') }}",
-                    type: 'POST',
-                    data: $('form#getCalendar').serialize(),
-                    success: function (response) {
-                        console.log('it worked!'+ response );
-                        window.location.href = href;
-                    },
-                    error: function(xhr, status, error) {
-                        var err = xhr.responseText;
-                        console.log('it failed!\n'+ err.Message);
-                    }
-               });
-            }
-        });
-        */
-
+            $('[data-toggle="tooltip"]').tooltip();
     });
 
-    function check_verif(cb) {
-        if((cb.is(":checked")) && (!cb.closest('.input-group').find('select.type_event').val())){
-            //.prop("checked", checked);
-            cb.closest('.input-group').find('select.type_event').attr('required',"required");
-
-        }
-        if((!cb.is(":checked")) && (!cb.closest('.input-group').find('select.type_event').val())){
-            //.prop("checked", checked);
-            cb.closest('.input-group').find('select.type_event').attr('required', false);
-            cb.removeClass('checked-success');
-        }
-    };
     </script>
 {% endblock %}
